<resources>
    <string name="app_name">Lika Store</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="register">Register</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">Telegram</string>
    <string name="twitter">Twitter</string>
    <string name="click_here_to_contact_us">Click here to Contact Us</string>
    <string name="developed_by_j_p"><![CDATA[{ Oak & Teak Technologies }]]></string>
    <string name="developers">Developers</string>
    <string name="contacts">Contacts</string>
    <string name="telegram_us">Telegram Us</string>
    <string name="email_us">Email Us</string>
    <string name="whatsapp_us">Whatsapp Us</string>
    <string name="user"><![CDATA[<user>]]></string>
    <string name="top_tier">TopTier</string>
    <string name="toptier_odds">TopTier Odds</string>
    <string name="best_in_liquor">Best in Liquor</string>
    <string name="explore_by_category">Explore by Category</string>
    <string name="recommended_drinks">Recommended Drinks</string>
    <string name="see_all">See All Drinks</string>
    <string name="_45_00">$45.00</string>
    <string name="_4_5">4.5</string>
    <string name="white_claw_black">White Claw Black</string>
    <string name="delivery_time_about_15_25mins">Delivery Time: About 15 – 25mins</string>
    <string name="product_description">Product Description</string>
    <string name="category">Category</string>
    <string name="vodka">Vodka</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_details">Product Details</string>
    <string name="cart">cart</string>
    <string name="_0">0</string>
    <string name="qty">Qty</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="free">Free</string>
    <string name="kshs_400">Kshs 400</string>
    <string name="sub_total">Sub Total</string>
    <string name="no_drinks">No drinks</string>
    <string name="kshs_405">Kshs 405</string>
    <string name="total">Total</string>
    <string name="tax">Package</string>
    <string name="kshs_5">Kshs 5</string>
    <string name="check_out">Check Out</string>
    <string name="payment_method">Payment Method</string>
    <string name="lipa_na_m_pesa">Lipa Na M-Pesa</string>
    <string name="delivery_address">Delivery Region</string>
    <string name="add_another_location">Add another location</string>
    <string name="sunfield_house">Sunfield House</string>
    <string name="juja_gatundu_road">Juja, Gatundu Road</string>
    <string name="total_kshs_4_000">Total: Kshs 4,000</string>
    <string name="confirm_order">Confirm order</string>
    <string name="amount_payable_is_for_4_item_s_6_qty_s">Amount payable is for 4 item(s), 6 Qty(s).</string>
    <string name="amount_payable_is_for">Amount payable for:</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_delivery_location">Enter delivery location</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="our_execute_will_reach_you_with_the_speed_of_lightning">Our execute will reach you with the speed of lightning</string>
    <string name="shop_more">Shop More</string>
    <string name="your_order_has_been_received">Your order has been received</string>
    <string name="pending">Our team is currently working on your order, you will receive regular updates about the status of your order. Thank You</string>
    <string name="lqs1234">LQS1234</string>
    <string name="checking_order_status">Checking order status…</string>
    <string name="delivered">Your order is on delivery</string>
    <string name="contact">Our team have started delivering your order. If there are any queries concerning this order, please contact us. Thank You</string>
    <string name="beer">Beer</string>
    <string name="whisky">Whiskey</string>
    <string name="gin">Gin</string>
    <string name="error_search">No drinks found matching your keyword!</string>
    <string name="my_cart">My Cart</string>
    <string name="order_status">Order Status</string>
    <string name="categories">Categories</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy">Privacy</string>
    <string name="terms">Terms</string>
    <string name="search">Search</string>
    <string name="search_for_drinks">Search for drinks</string>
    <string name="enter_amount">Enter amount</string>
    <string name="lika_store">Lika Store</string>
    <string name="best_in_liquors">Best in liquors</string>
    <string name="soft_drinks">Soft Drinks</string>
</resources>