<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/cart"
        android:icon="@drawable/shopping_cart"
        android:title="@string/my_cart" />
    <item
        android:id="@+id/order_status"
        android:icon="@drawable/waiting"
        android:title="@string/order_status" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />


    <item
        android:id="@+id/contacts"
        android:icon="@drawable/contacts"
        android:title="@string/contact_us">
        <menu>
            <item
                android:id="@+id/email"
                android:icon="@drawable/email"
                android:title="@string/email" />
            <item
                android:id="@+id/whatsapp"
                android:icon="@drawable/whatsapp"
                android:title="@string/whatsapp" />
            <item
                android:id="@+id/telegram"
                android:icon="@drawable/telegram"
                android:title="@string/telegram" />
        </menu>
    </item>

    <item android:title="@string/app_name">
        <menu>
            <item android:title="@string/share"
                android:id="@+id/share_button"
                android:icon="@drawable/share"
                app:showAsAction="always">
            </item>
            <item
                android:id="@+id/privacy"
                android:icon="@drawable/privacy"
                android:title="@string/privacy" />
            <item
                android:id="@+id/terms"
                android:icon="@drawable/terms"
                android:title="@string/terms" />
        </menu>
    </item>
    <item android:title="@string/developers">
        <menu>
            <item
                android:id="@+id/developers"
                android:icon="@drawable/developers"
                android:title="@string/developed_by_j_p" />
        </menu>
    </item>
</menu>