<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        android:layout_width= "match_parent"
        android:layout_height= "wrap_content" >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/drink_poster"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="350dp"/>
            <androidx.appcompat.widget.Toolbar
                android:id= "@+id/toolbar"
                app:layout_collapseMode="pin"
                android:layout_width= "match_parent"
                android:layout_height= "?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:gravity="center_horizontal" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/details"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/drink_name"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/white_claw_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_marginTop="3dp"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/drink_price"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:text="@string/_45_00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/drink_description"
                android:text="@string/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold"
                android:text="@string/category"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/drink_category"
                android:text="@string/vodka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_to_cart"
            android:text="@string/add_to_cart"
            android:layout_weight="1"
            android:background="@color/blue_for_buttons"
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />

        <TextView
            android:layout_weight="1.8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buy_now"
            android:text="@string/buy_now"
            android:layout_weight="1"
            android:background="@color/colorAppBar"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" />

    </LinearLayout>

</LinearLayout>