<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="0.5dp"
    android:background="@drawable/border"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/drink_poster"
        android:layout_margin="3dp"
        android:padding="1dp"
        android:layout_width="match_parent"
        android:layout_height="130dp"/>

    <TextView
        android:id="@+id/drink_name"
        android:layout_margin="3dp"
        android:text="@string/white_claw_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/drink_price"
            android:text="@string/_45_00"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/rating"
                android:layout_gravity="end"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/rating"
                android:text="@string/_4_5"
                android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>