<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:layout_margin="1dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/drink_poster"
                android:layout_margin="1dp"
                android:padding="1dp"
                android:layout_width="match_parent"
                android:layout_height="110dp"/>

            <TextView
                android:id="@+id/add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableRightCompat="@drawable/shopping_cart_add" />

            <TextView
                android:id="@+id/drink_name"
                android:layout_below="@id/drink_poster"
                android:textColor="@color/colorIcons"
                android:layout_margin="1dp"
                android:text="@string/white_claw_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@id/drink_name"
                android:layout_margin="1dp"
                android:padding="2dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/drink_price"
                    android:text="@string/_45_00"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rating"
                        android:text="@string/_4_5"
                        android:textAlignment="textEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:drawableLeftCompat="@drawable/rating" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>